--- a/public/alibaba/css/style.css
+++ b/public/alibaba/css/style.css
@@ -581,6 +581,9 @@ body {
 	min-height: 120px;
 	padding-right: 10px;
 }
+section #flash_deal .container{
+    height: 306.9px;
+}
 
 .t_selection_product:last-child {
 	padding-right: 0;
@@ -620,6 +623,9 @@ body {
 	position: relative;
 	width: 100%;
 	height: 50px;
+}
+.pricing_wrap_ts .text-dark {
+    font-size: .8rem;
 }
 
 .product_price_ts {
@@ -900,6 +906,14 @@ span.mtl_product_shipping {
     padding: 3px 2px;
     color: #8a8a8a;
 }
+span.mtl_product_sale {
+    background: #e6e6e6;
+    width: 50px;
+    font-size: 14px;
+    padding: 2px 37xp;
+    padding: 3px 2px;
+    color: #8a8a8a;
+}
 
 .mtl_product_item:hover {
 	box-shadow: 0 0 8px #88888890;
@@ -917,7 +931,7 @@ span.mtl_product_shipping {
 	transition: all linear .3s;
 }
 .mtl_product_item h2{
-	font-size: 13px;
+	font-size: 11px;
     font-family: 'Open Sans', sans-serif;
 }
 
@@ -928,7 +942,7 @@ span.mtl_product_shipping {
 
 .mtl_product_item_img_wrap img {
 	width: 200px;
-    height: 210px;
+    height: auto;
 }
 
 h2.mtl_product_price {
