--- a/public/frontend/css/colors/3.css
+++ b/public/frontend/css/colors/3.css
@@ -289,7 +289,7 @@ input:checked + .toggle-switch-slider:before,
 .product-box-2 .add-to-cart:hover
 
 {
-    background-color: #72bf40;
+    background-color: #FF4747;
 }
 
 
@@ -300,7 +300,7 @@ input:checked + .toggle-switch-slider:before,
 .bg-base-1
 
 {
-    background-color: #72bf40 !important;
+    background-color: #FF4747 !important;
 }
 
 
@@ -308,11 +308,11 @@ input:checked + .toggle-switch-slider:before,
 
 
 .bg-soft-base-1{
-    background-color: rgba(114, 192, 64, .1) !important; 
+    background-color: rgba(114, 192, 64, .1) !important;
 }
 
 .bg-light-base-1{
-    background-color: rgba(114, 192, 64, .2) !important; 
+    background-color: rgba(114, 192, 64, .2) !important;
 }
 
 
@@ -391,7 +391,7 @@ a > .feature--boxed-border:hover,
 .seller-shop-menu li a:hover,
 .aiz-megabox>input:checked~.aiz-megabox-elem, .aiz-megabox>input:checked~.aiz-megabox-elem
 {
-    border-color: #72bf40;
+    border-color: #FF4747;
 }
 
 .btn-base-1.btn-outline,
@@ -435,7 +435,7 @@ a > .feature--boxed-border:hover,
 
     .tabs .nav-pills.nav-pills--rounded .active .nav-pill .nav-pill-circle,
     .tabs .nav-pills.nav-pills--rounded a.active:hover .nav-pill .nav-pill-circle
-    
+
     {
         background: #72bf40;
     }
@@ -471,7 +471,7 @@ a > .feature--boxed-border:hover,
     .navbar-aside .navbar-expand-lg .navbar-nav .nav-link:focus,
     .navbar-aside .navbar-expand-lg .navbar-nav .show .nav-link,
     .navbar-aside .navbar-expand-lg .navbar-nav .show .nav-link:hover
-    
+
     {
         color: #72bf40;
     }
