--- a/public/alibaba/css/cart.css
+++ b/public/alibaba/css/cart.css
@@ -265,14 +265,14 @@ ul {
     height: 96px;
     width: 100%;
     background-color: #fff;
-    z-index: 99999;
+    /* z-index: 111; */
 }
 
 .navbar-wrap {
     position: relative;
     width: auto;
     padding-top: 23px;
-    z-index: 99999;
+    /* z-index: 99999; */
 }
 
 .navbar-wrap.sticky {
@@ -281,7 +281,7 @@ ul {
     width: 100%;
     background-color: #fff;
     box-shadow: 0 6px 12px rgba(0, 0, 0, .05);
-    z-index: 99999;
+    z-index: 111;
 }
 
 .header-wrapper .navbar-brand span {
