--- a/public/alibaba/css/style.css
+++ b/public/alibaba/css/style.css
@@ -434,7 +434,7 @@ body {
 }
 
 .product_price {
-	
+
 	position: absolute;
 	left: 0;
 	font-weight: bold;
@@ -900,6 +900,9 @@ section #flash_deal .container{
 .more_to_love_title {
 	font-size: 24px;
 	font-weight: 700;
+}
+.modal{
+    z-index: 99999 !important;
 }
 
 .mtl_product_item {
