--- a/template/css/style.menu.banner.css
+++ b/template/css/style.menu.banner.css
@@ -17,14 +17,14 @@ ul {
     height: 96px;
     width: 100%;
     background-color: #fff;
-    z-index: 99999;
+    /* z-index: 99999; */
 }
 
 .navbar-wrap {
     position: relative;
     width: auto;
     padding-top: 23px;
-    z-index: 99999;
+    /* z-index: 99999; */
 }
 
 .navbar-brand {
@@ -41,7 +41,7 @@ ul {
     width: 100%;
     background-color: #fff;
     box-shadow: 0 6px 12px rgba(0, 0, 0, .05);
-    z-index: 99999;
+    z-index: 111;
 }
 
 .header-wrapper .navbar-brand span {
