flash deal top ranking changes

--- a/public/alibaba/css/style.css
+++ b/public/alibaba/css/style.css
@@ -1024,7 +1024,7 @@ h2.mtl_product_price {
 }
 
 #fotter_widget_one .col-lg-2 {
-	border-left: 1px solid #ddd;
+	border-left: 0px;
 }
 
 .fw1_item {
